--- a/src/app/components/contact-form/contact-form.component.html
+++ b/src/app/components/contact-form/contact-form.component.html
@@ -1,64 +1,57 @@
-<form (ngSubmit)="contactForm.valid && onSubmit()">
+<form
+[formGroup]="contactForm" (ngSubmit)="contactForm.valid && onSubmit()">
   <fieldset>
     <label for="lastname">Nom</label>
-    <input id="lastname" name="lastname" type="text" require min="2">
-    @if (lastname.errors) {
-      <div>
-        @if (lastname.errors['required']) {
-          <span>Le nom est requis</span>
-        }
-        @if (lastname.errors['minlength']) {
-          <span>La longueur minimale doit être supérieure à 2</span>
-        }
-      </div>
+    <input id="lastname" formControlName="lastname" name="lastname" type="text" required minlength="2">
+    @if (contactForm.get('lastname')?.errors && contactForm.get('lastname')?.touched) {
+      @if (contactForm.get('lastname')?.errors?.['required']) {
+        <span>Le nom est requis</span>
+      }
+      @if (contactForm.get('lastname')?.errors?.['minlength']) {
+        <span>La longueur minimale doit être supérieure à 2</span>
+      }
     }
   </fieldset>
 
   <fieldset>
     <label for="firstname">Prénom</label>
-    <input id="firstname" name="firstname" type="text" require min="2">
-    @if (firstname.errors) {
-      <div>
-        @if (firstname.errors['required']) {
-          <span>Le prénom est requis</span>
-        }
-        @if (firstname.errors['minlength']) {
-          <span>La longueur minimale doit être supérieure à 2</span>
-        }
-      </div>
+    <input id="firstname" formControlName="firstname" name="firstname" type="text" required minlength="2">
+    @if (contactForm.get('firstname')?.errors && contactForm.get('firstname')?.touched) {
+      @if (contactForm.get('firstname')?.errors?.['required']) {
+        <span>Le prénom est requis</span>
+      }
+      @if (contactForm.get('firstname')?.errors?.['minlength']) {
+        <span>La longueur minimale doit être supérieure à 2</span>
+      }
     }
   </fieldset>
 
   <fieldset>
     <label for="email">Contact</label>
-    <input id="email" name="email" type="email" require email>
-    @if (email.errors) {
-      <div>
-        @if (email.errors['required']) {
-          <span>L'email est requis</span>
-        }
-        @if (email.errors['email']) {
-          <span>Veuillez fournir une adresse email valide</span>
-        }
-      </div>
+    <input id="email" formControlName="email" name="email" type="email" required>
+    @if (contactForm.get('email')?.errors && contactForm.get('email')?.touched) {
+      @if (contactForm.get('email')?.errors?.['required']) {
+        <span>L'email est requis</span>
+      }
+      @if (contactForm.get('email')?.errors?.['email']) {
+        <span>Veuillez fournir une adresse email valide</span>
+      }
     }
   </fieldset>
 
   <fieldset>
     <label for="content">Contenu du message</label>
-    <textarea id="content" name="content" require minlength="20" rows="4" cols="50"></textarea>
-    @if (content.errors) {
-      <div>
-        @if (content.errors['required']) {
-          <span>Le contenu du message est requis</span>
-        }
-        @if (content.errors['minlength']) {
-          <span>Le contenu doit comporter au moins 20 caractères</span>
-        }
-      </div>
+    <textarea id="content" formControlName="content" name="content" required minlength="20" rows="4" cols="50"></textarea>
+    @if (contactForm.get('content')?.errors && contactForm.get('content')?.touched) {
+      @if (contactForm.get('content')?.errors?.['required']) {
+        <span>Le contenu du message est requis</span>
+      }
+      @if (contactForm.get('content')?.errors?.['minlength']) {
+        <span>Le contenu doit comporter au moins 20 caractères</span>
+      }
     }
   </fieldset>
 
-  <button type="reset">Restaurer</button>
-  <button type="submit">Sauvegarder</button>
+  <button type="reset" (click)="onReset()">Restaurer</button>
+  <button type="submit" [disabled]="contactForm.invalid">Sauvegarder</button>
 </form>
