--- a/src/app/components/signup-form/signup-form.component.html
+++ b/src/app/components/signup-form/signup-form.component.html
@@ -1,4 +1,4 @@
-<form (ngSubmit)="onSubmit()">
+<form [formGroup]="signUpForm" (ngSubmit)="onSubmit()">
   <div>
     <label for="username">Nom d'utilisateur</label>
     <input id="username" formControlName="username">
