--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header-top">
-    <span class="header-logo">Jane DOE</span>
+    <span class="header-logo">MENNAA Yacine</span>
     <nav class="header-nav">
       <a routerLink="/">Accueil</a>
       <a href="#">Articles</a>
