--- a/src/app/components/article-list/article-list.component.html
+++ b/src/app/components/article-list/article-list.component.html
@@ -1,12 +1,13 @@
 <h2>Articles Populaires</h2>
 <div class="main-container">
-  @for (article of articles; track article.id) { @if (article.isPublished) {
+  @for (article of articles$| async; track $index) { 
+    @if (article.isPublished) {
   <app-article-thumbnail
     [article]="article"
     (notifyLike)="handleLike(article)"
   ></app-article-thumbnail>
   } }
-  @if (articles.length === 0) {
+  @if (!articles$) {
   <p>Aucun article n'est disponible</p>
   }
 </div>
